modules/noosphere/taghmata/nixidy/manifests/prod/keycloak/Deployment-keycloak-operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.quarkus.io/build-timestamp: 2026-01-06 - 07:49:45 +0000
    app.quarkus.io/quarkus-version: 3.27.1
    app.quarkus.io/vcs-uri: https://github.com/keycloak/keycloak.git
  labels:
    app.kubernetes.io/managed-by: quarkus
    app.kubernetes.io/name: keycloak-operator
    app.kubernetes.io/version: 26.5.0
  name: keycloak-operator
  namespace: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: keycloak-operator
  template:
    metadata:
      annotations:
        app.quarkus.io/build-timestamp: 2026-01-06 - 07:49:45 +0000
        app.quarkus.io/quarkus-version: 3.27.1
        app.quarkus.io/vcs-uri: https://github.com/keycloak/keycloak.git
      labels:
        app.kubernetes.io/managed-by: quarkus
        app.kubernetes.io/name: keycloak-operator
        app.kubernetes.io/version: 26.5.0
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: RELATED_IMAGE_KEYCLOAK
              value: quay.io/keycloak/keycloak:26.5.0
            - name: QUARKUS_OPERATOR_SDK_CONTROLLERS_KEYCLOAKREALMIMPORTCONTROLLER_NAMESPACES
              value: JOSDK_WATCH_CURRENT
            - name: QUARKUS_OPERATOR_SDK_CONTROLLERS_KEYCLOAKCONTROLLER_NAMESPACES
              value: JOSDK_WATCH_CURRENT
          image: quay.io/keycloak/keycloak-operator:26.5.0
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/live
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          name: keycloak-operator
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/ready
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          resources:
            limits:
              cpu: 700m
              memory: 450Mi
            requests:
              cpu: 300m
              memory: 450Mi
          startupProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/started
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
      serviceAccountName: keycloak-operator
