modules/noosphere/taghmata/nixidy/manifests/prod/keycloak/Service-keycloak-operator.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.quarkus.io/build-timestamp: 2026-01-06 - 07:49:45 +0000
    app.quarkus.io/quarkus-version: 3.27.1
    app.quarkus.io/vcs-uri: https://github.com/keycloak/keycloak.git
  labels:
    app.kubernetes.io/managed-by: quarkus
    app.kubernetes.io/name: keycloak-operator
    app.kubernetes.io/version: 26.5.0
  name: keycloak-operator
  namespace: keycloak
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: keycloak-operator
  type: ClusterIP
