modules/noosphere/taghmata/nixidy/manifests/prod/keycloak/Ingress-keycloak-ip-root.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    argocd.proj.io/sync-options: Prune=false,Delete=false
    category: security
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    glance/description: Identity Provider
    glance/icon: di:keycloak
    glance/id: keycloak
    glance/name: Keycloak
    glance/parent: keycloak
    glance/url: https://keycloak.noosphere.uk
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
  name: keycloak-ip-root
  namespace: keycloak
spec:
  ingressClassName: traefik
  rules:
    - host: keycloak.noosphere.uk
      http:
        paths:
          - backend:
              service:
                name: keycloak
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - keycloak.noosphere.uk
      secretName: keycloak-tls
